
 ** Other new functions added in 4.2:

      psi

 ** Deprecated functions.

    The following functions have been deprecated in Octave 4.2 and will
    be removed from Octave 4.6 (or whatever version is the second major
    release after 4.2):

      Function             | Replacement
      ---------------------|------------------
      bitmax               | flintmax
      wavread              | audioread
      wavwrite             | audiowrite

 ** The following functions were deprecated in Octave 3.8 and have been
    removed from Octave 4.2.

      default_save_options    java_new
      gen_doc_cache           java_unsigned_conversion
      interp1q                javafields
      isequalwithequalnans    javamethods
      java_convert_matrix     re_read_readline_init_file
      java_debug              read_readline_init_file
      java_invoke             saving_history


Summary of important user-visible changes for version 4.0:
---------------------------------------------------------

 ** A graphical user interface is now the default when running Octave
    interactively.  The start-up option --no-gui will run the familiar
    command line interface, and still allows use of the GUI dialogs and
    qt plotting toolkit.  The option --no-gui-libs runs a minimalist
    command line interface that does not link with the Qt libraries and
    uses the fltk toolkit for plotting.

 ** Octave now uses OpenGL graphics with Qt widgets by default.  If OpenGL
    libraries are not available when Octave is built, gnuplot is used.
    You may choose to use the fltk or gnuplot toolkit for graphics by
    executing the command

      graphics_toolkit ("fltk")
        OR
      graphics_toolkit ("gnuplot")

    Adding such a command to your ~/.octaverc file will set the default
    for each session.

 ** A new syntax for object oriented programming termed classdef has been
    introduced.  See the manual for more extensive documentation of the
    classdef interface.
